force-app/main/default/objects/Category__c/fields/Is_Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Category__c</fullName>
    <formula>IF( ISBLANK(Parent_Category__c), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent Category</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>