force-app/main/default/objects/Category__c/fields/Subgroup__c.field-meta.xml
<CustomField>
    <fullName>Subgroup__c</fullName>
    <label>Subgroup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>