force-app/main/default/objects/Category__c/listViews/Parent_Categories.listView-meta.xml
<ListView>
    <fullName>Parent_Categories</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Parent_Category__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Parent Categories</label>
    <language>en_US</language>
</ListView>